# rust-me

./: README.md
ch_1/ch_1_1/: main
chat_app_server/: Cargo.toml
chat_app_server/src/: main.rs
rust-by-example/: playground  playground.rs  raii  raii.rs
rust_book/: README.md
rust_book/ch_2/guessing_game/: NOTES.md
rust_book/ch_2/guessing_game/src/: main.rs
rust_book/ch_3/: NOTES.md  NOTES_FN.md  NOTES_IF.md  NOTES_LOOP.md  NOTES_VARS.md  main  main.rs
rust_book/ch_4/: OWNERSHIP.md
rustlings/exercises/: primitive_types2  quiz1.rs  quiz2.rs
rustlings/exercises/enums/: enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors2.rs
rustlings/exercises/functions/: functions3.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/options/: options1.rs
rustlings/exercises/primitive_types/: primitive_types2.rs
rustlings/exercises/strings/: strings3.rs
rustlings/exercises/structs/: structs1.rs  structs2.rs  structs3.rs
rustlings/exercises/variables/: variables2.rs  variables6.rs
rustlings/exercises/vecs/: vecs2.rs
rustlings/~/.local/share/nvim/undo/: %Users%vicente%.config%nvim%lua%wake%packer.lua  %Users%vicente%Documents%repos%rust-me%rustlings%exercises%move_semantics%move_semantics1.rs  %Users%vicente%Documents%repos%rust-me%rustlings%exercises%move_semantics%move_semantics2.rs  %Users%vicente%Documents%repos%rust-me%rustlings%exercises%primitive_types%primitive_types5.rs  %Users%vicente%Documents%repos%rust-me%rustlings%exercises%primitive_types%primitive_types6.rs  (+2 more)
(+7 files in other folders)
